--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 alembic==1.16.4; python_version >= '3.9'
 bcrypt==4.3.0; python_version >= '3.8'
 blinker==1.9.0; python_version >= '3.9'
+certifi==2025.11.12; python_version >= '3.7'
+charset-normalizer==3.4.4; python_version >= '3.7'
 click==8.3.1; python_version >= '3.10'
 flask==3.1.2; python_version >= '3.9'
 flask-login==0.6.3; python_version >= '3.7'
@@ -9,6 +11,7 @@ flask-migrate==4.1.0; python_version >= '3.6'
 flask-sqlalchemy==3.1.1; python_version >= '3.8'
 flask-wtf==1.2.2; python_version >= '3.9'
 gunicorn==23.0.0; python_version >= '3.7'
+idna==3.11; python_version >= '3.8'
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.6; python_version >= '3.7'
 mako==1.3.10; python_version >= '3.8'
@@ -16,7 +19,9 @@ markupsafe==3.0.3; python_version >= '3.9'
 packaging==25.0; python_version >= '3.8'
 psycopg2-binary==2.9.10; python_version >= '3.8'
 python-dotenv==1.1.1; python_version >= '3.9'
+requests==2.32.5; python_version >= '3.9'
 sqlalchemy==2.0.43; python_version >= '3.7'
 typing-extensions==4.14.1; python_version >= '3.9'
+urllib3==2.6.2; python_version >= '3.9'
 werkzeug==3.1.4; python_version >= '3.9'
 wtforms==3.2.1; python_version >= '3.9'
